所以 我现在差不多把这个rank系统可以用了 也加了蹩脚的身份特性 期待优化吧 现在很愚蠢 现在这个版本就是有问题 也许我懒得修改了

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -66,7 +66,12 @@ commands:
     description: Reload all configs
     usage: /<command>
     permission: darkpixel.admin
-
+  rank:
+    description: 管理玩家的 Rank
+    usage: /<command> <set|get|list> [player] [rank/score]
+  signin:
+    description: 打开签到界面
+    usage: /<command>
 permissions:
   darkpixel.giveblockablesword:
     description: 允许使用 /giveblockablesword 命令
