--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,14 @@ repositories {
     maven { url = uri("https://repo.codemc.io/repository/maven-releases/") }
     maven { url = uri("https://repo.codemc.io/repository/maven-snapshots/") }
 }
+
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.7.0";
-    compileOnly("de.tr7zw:item-nbt-api-plugin:2.14.1")
-    compileOnly("com.github.retrooper:packetevents-spigot:2.7.1-SNAPSHOT")
+    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.7.0"
+    compileOnly "de.tr7zw:item-nbt-api-plugin:2.14.1"
+    compileOnly "com.github.retrooper:packetevents-spigot:2.7.1-SNAPSHOT"
 }
 
 def targetJavaVersion = 21
