重构rank系统 group系统 地基已打好 发言颜色暂时不可用 没测试啥 反正rank什么的已经好了 前端设置大部分都可操控 下个版本继续优化

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -75,6 +75,11 @@ commands:
   toggleeffects:
     description: 开关进服特效
     usage: /<command>
+  darkban:
+    description: 封禁或解封玩家
+    usage: /<command> ban <player> <time> [reason] 或 /<command> unban <player>
+    permission: darkpixel.admin
+
 permissions:
   darkpixel.giveblockablesword:
     description: 允许使用 /giveblockablesword 命令
