修复 /darkban 与网页同步，添加 RankServerClient 同步身份组到子插件 优化 LoginMessageUtil 的 OP 权限管理和 oldcombatmechanics 指令执行 使用 INSERT ON DUPLICATE KEY UPDATE 优化网页增加卡牌滚动条

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,12 @@
-#数据库
+# 数据库
 mysql:
   host: "localhost"
   port: 3306
   database: "darkpixel"
   username: "root"
   password: "dwgx0705"
-http_port: 25567
+http_port: 25560
+rank_server_url: "http://localhost:25560"
 
 # AI
 api_key: ""
